GUI-1478: Fix spacing below summary area labels in create/launch wizards

--- a/eucaconsole/static/css/pages/launchconfig_wizard.css
+++ b/eucaconsole/static/css/pages/launchconfig_wizard.css
@@ -24,7 +24,7 @@
 .wizard .chosen-container-multi .chosen-choices li.search-field input.default { color: #333; font-size: 14px; font-family: Lato, Helvetica, Arial, sans-serif; margin-left: 3px; }
 
 .summary { background-color: white; position: relative; top: 2px; padding: 8px; padding-bottom: 2rem; margin-bottom: 1rem; }
-.summary label { position: relative; right: -1rem; color: #6a737b; font-weight: bold; margin-bottom: 2px; margin-top: 4px; }
+.summary label { position: relative; right: -1rem; color: #6a737b; font-weight: bold; margin-bottom: -2px; margin-top: 4px; }
 .summary .value { word-break: break-all; }
 .summary .row { margin-bottom: 5px; }
 .summary .title { font-weight: bold; border-bottom: 1px solid #03405f; margin-top: 7px; margin-bottom: 1rem; }
