--- a/eucaconsole/static/sass/includes/_wizard.scss
+++ b/eucaconsole/static/sass/includes/_wizard.scss
@@ -134,7 +134,7 @@ $wizard-tab-padding: 8px 1rem;
         right: -1rem;
         color: $euca-grey;
         font-weight: bold;
-        margin-bottom: 2px;
+        margin-bottom: -2px;
         margin-top: 4px;
     }
     .value {
